# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1503 2015/02/21 11:04:19 zlogene Exp $

  21 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> gentoo-sources-3.18.7.ebuild:
  amd64 stable wrt bug #540866

  21 Feb 2015; Mike Pagano <mpagano@gentoo.org> gentoo-sources-3.14.33.ebuild:
  Auto stabilize 3.14 branch.

  21 Feb 2015; Mike Pagano <mpagano@gentoo.org> gentoo-sources-3.10.69.ebuild:
  Auto stabilization of the 3.10 branch.

*gentoo-sources-3.12.38 (21 Feb 2015)

  21 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.38.ebuild:
  Linux patch 3.12.38

  11 Feb 2015; Mike Pagano <mpagano@gentoo.org> gentoo-sources-3.10.69.ebuild:
  Fix genpatches version for 3.10.69

*gentoo-sources-3.10.69 (11 Feb 2015)

  11 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.69.ebuild:
  Linux patch 3.10.69

*gentoo-sources-3.14.33 (11 Feb 2015)

  11 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.33.ebuild:
  Linux patch 3.14.33

*gentoo-sources-3.18.7 (11 Feb 2015)

  11 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.18.7.ebuild:
  Linux patch 3.18.7

*gentoo-sources-3.12.37 (09 Feb 2015)

  09 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.12.37.ebuild:
  Linux patches 3.12.36 and 3.12.37. Add DEVPTS_MULTIPLE_INSTANCES when
  GENTOO_LINUX_INIT_SYSTEMD is selected. See bug #534216.

*gentoo-sources-3.19.0 (09 Feb 2015)

  09 Feb 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.0.ebuild:
  Patch to support for namespace user.pax.* on tmpfs. Patch to disable Windows
  8 compatibility for some Lenovo ThinkPads. Patch to ensure that /dev/root
  doesn't appear in /proc/mounts when bootint without an initramfs. Patch: Do
  not lock when UMH is waiting on current thread spawned by linuxrc. (bug