@@ -2,26 +2,29 @@
 Hash: SHA512
 
 DIST qcustomplot-sharedlib-1.2.1.tar.gz 1920 SHA256 16b3f59182d3703152589d71da580fbded0a67f88ab7df81b86095422d27685b SHA512 51df754a6657621a5e5b2e3dcc295890ac76ab4839089f25c65eb84758e7ac5c9821dd47acbaaa8da7a69b609abb1b6a829939eee616111994278856d371be78 WHIRLPOOL 02a3476811f89dbd21003d1da063615a9776d67436c5f525f5a773b21274a6aa091ba44130e7989f842bd85aad7633efa8a361cadadea2f3343b57a120f62cc4
+DIST qcustomplot-sharedlib-1.3.0.tar.gz 1927 SHA256 68f4574b53f0cbdaafdee06ad0048b60e4905d5031033f1721886cf763e1f774 SHA512 6ab098a676dc3ed4caba2b0784b79ebca70de52296dc1ca0caca7c00b2abc46d92ff1903785a9185eedd78044f9b9d730d798dc91cff5cc76b463796a74e3e9e WHIRLPOOL 0e919fb38e799217d3eb2f62915a6a9077ad621eb248cbd722cfd659e929471bff09c015df1be46c1d6a8f23b77c7bc437ec7ae430980dbfe0b07292909c99b0
 DIST qcustomplot-source-1.2.1.tar.gz 208367 SHA256 9ac31c797ce9116c0b062249028c25a8b04a0cb4ae5cd5dcca52c2000a64bcd2 SHA512 f4613b4e85b98616974588edfe35c262eaa7975486a252b18f73c28aa3ed5e867955ddd6243f082b4fa080a93890d7d20b64e8f12e03bf6fdcb8417554438523 WHIRLPOOL 0c1dd80e0220ee9f80deff0b8baf373da587622084b834b6b3a9194d7286aae5a29bc352bf8d7bddcc8f27df6ebf7044709973d2179c1b4bed402cea9b94cdb2
+DIST qcustomplot-source-1.3.0.tar.gz 222695 SHA256 1b4c9d5ad4581fc33465e4e5a3ec63938fdaad78944e6118d1aa25dd0235afd6 SHA512 6991c05d38677f24697516fd41c6a6e85d6becd1de8e1e413577170246945fc318519d74407c6a995d72e2c6c05114469e6fbbdea2b17b1060f6d2fc35fb3d7f WHIRLPOOL 32e98f2b2d6e5d80017711d92a9587dce29880c9e707cfe291ee71a8b04a06680ca96aa52be0092875bc98cefe02f052eb98a6c1990b976b9ae3e68b26e61ec7
 EBUILD qcustomplot-1.2.1.ebuild 1019 SHA256 45f737c00dd47550b75cbe908698483d6a477751ca3ea53b0a82a701086d7585 SHA512 2d959e4c2e5c63db5a3a53a58d5eaec98ab3989e4940d641b9a899abf8d9887b1c81e9706655f31effbc9ee86f88503b61e83c7dcf8f588a9b84b2ef7e8e9849 WHIRLPOOL 18e31528733c28f47ec1580bd72e8c9a09d2c5791c26522b508683a1594b0daf795c57afcf52fd1b989257ec09f352d974a185669608c0ffd9eb728bb6b87d5e
-MISC ChangeLog 568 SHA256 e963bc8c6da933fc58b35f50a5e1fe6ce1c0d15527acad42872a920edca26868 SHA512 0e9b6a2df759d8e60f9df8c52262529cfbdb0eb9b207a6c3dd995090d9b1b633a5c7613093742ca0d8eb2bbb195064af9143a5eb2aab2f6b0b9bb6c01cc07cc0 WHIRLPOOL e712a218840fc7e2bd3d703a4d93f297b2c64ed7db367bd28b212cf28a8e7a5ea5f7fd4b55b0230b49e879e5c9c64025d6b29d21bc3db59d9dbe885d22349eb1
+EBUILD qcustomplot-1.3.0.ebuild 1212 SHA256 789fe4fb0d1f2f8e549a76760c2ecd8606a147956d2fa13666e40947da4c660b SHA512 348b9ecb72a3b8860587ecd8c7b31fa3658b5b9d5800c96eb431146e4a4a2cc13776aab4aee41d98a6eff4023c469ce07216814bccc61328bc85e3aa756a661f WHIRLPOOL 994e068a134862f649e40f6aa16467b5c8873a8b53bf1501a5600fa8b026e51f33a66144640b96652a8c96079e0b3ffdd58819536f5c322c91084cfcbd8b8775
+MISC ChangeLog 691 SHA256 8e01418003de20fe2f0ed453e84a85dd63e86b9001216864f3a27a847c531803 SHA512 3e46132503fbd92ed9e76f8a4b3805e5cc0a387982471a3a8b532599d01d00ac7a38b734001715e6aa45751673e2edc1a4aa7c5a29e278bebceb7016b35cd731 WHIRLPOOL 6dff7e1ba1b7bab9c0e0907fa18d7d6324e9c5b95918b064c66aeee884c3e275d26d67afb1dffec60d63a35632e74fbb6dcb290843ed3d2f7f6b66b452c86314
 MISC metadata.xml 223 SHA256 da007811e2ec3ffee6629dfe91fb91b03ced4a6b7de69d5043c32b774d48a68e SHA512 c1113349fc05365faf25a14d6db612e1e2ed1b0230f838c1df8fe7598cff130c9da06eed1dc72e706f831db44a66c3092f8ed3b278c6217c6fc229656a8925f4 WHIRLPOOL ad4e2444f5440cc70e080670638c6f8ed1debf07ac743d07cccf973d3077bde5b44d212bb4fee438d1c2de5ec9159fddaa19cbb798f0e0910bd64f680df98859
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUKQeHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJU6IaOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirTWMQAJgwy1XmNiMsBmoKE16sbfPk
-gtbwHBlxGDUwh6Bg1+YiA6rlcysEx1SXn87ysHlcQWBJ8vupDvkXEi4B9NyhiAeZ
-NmYYGizIy5LxoBZ6MeEvqJGQV9VHTzC5ZWuSCBj3E/6zv9SbRqEV54YYF1WeouKc
-2BvazvtrFoUNRmz4b54h9eKVeXzJ3KreDtDCaDiHEXCf7i47pHgsBRvQG94k+PGS
-rG6JNDk5AVGejHntCN7Iql0IoX2I6ddIcnCZlooFTlCLK02BLBONgbZ6j1ZQEo5L
-301M1XiUecautCaOlmz3u6MLG8ccQcDJTmjfLoiYLReMsnsRZ/jOQheri+CGuAke
-+LW8ik+mDTihtZJdBbtLL6Nzxcndx19VC+pqpBF04h7KgHjAa1J2Owj7Cm2DvXfm
-knhUxr/LNhLJrTy1Ix5axkbIgFTvTIUD20zXPgGCqWdVH8qC/Vp/tFh9E/o69EDE
-hVW87FeFUpyznFCtWhg+E+11d+maEg1lAiXuyvzN4qlBUwOCg1j9QUSvTIM+QR9L
-VHBcZDDccKYd1gKTrnVYdusm6JqgWNd2JzfBVq3ROFyXmTd/yAi9XbwdK7qTemeK
-p9t3hQCXwitTAlwHx/NgFvHzpWhgl19Cc82PEsrm0zxQ2tLSM834QuWwkVk1RYo1
-27L8p1FvMrlwHqJy8ogG
-=YQxf
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirT7gP/1uU+Od9QobBqBRl0Ik8OIqc
+zj8lGEs5tfSVhqq9Zhgl8HvjEW6b5KjYQpvsLMZHZbb7cBtmJITzEz2e+2k6kt2E
+/4sg6jZWvIIyrd1dYWrkRRm/CuWd2z9LP8HpTdNp2e8cRTMJctQmP3plMbTDOSwL
+EHpiFSxyTbeaSRZgYy6jLYyP6UeboKNbwg3uTITYLkrkgqclGxniwhqArCQAu7X2
+v4j5ADjxnuEAXG/IIIGgCFrNzk5lwG0m2SWBPwrQmC6iNku9mErTndS6nAweB4c0
+VrEHOOO8KU3s7ZIRv4SdQBVVR/3jo5PPK7YgtfZp4OO17W+YcXeXeyaysHn2v6Jv
+S7DrfjAmMywNppuTekNH4hNtmy05U+JU0PA/DwqRIJ3o8SY1DMLql6gyHoR6kNi2
+TurU9UKF3U9SckFNwmCxYunSdm0cui9wFgRndjQNQSVqqo5HQq07vsLSLfBpBVvH
+7nlkbW61MIpSv63FzntY8iUGjAt62BCoHYnrgo1RtL5G/SaDOyOjz07eBJqnpNfW
+wMNDj9+5nSm3TLhDVNEcygaHo1WLYbcYNJWCOXoAlaKT2/NuS0VqNbLkzfeUsXfg
+kE5QK9sMaPeKInm0yIPZEoAoOYlIlm5rbbsho1af2dDpXH4Yp2tE17TCh9lZzKa/
+vQCqun4keZ8tzlkTuFFC
+=okus
 -----END PGP SIGNATURE-----
