@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 ) qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dev-qt/qtwidgets:5 )
+DESCRIPTION=Qt C++ widget for plotting and data visualization
+EAPI=5
+HOMEPAGE=http://www.qcustomplot.com/
+IUSE=qt4 qt5
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=GPL-3
+RDEPEND=qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 ) qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dev-qt/qtwidgets:5 )
+REQUIRED_USE=^^ ( qt4 qt5 )
+SLOT=0
+SRC_URI=http://www.qcustomplot.com/release/1.3.0/QCustomPlot-sharedlib.tar.gz -> qcustomplot-sharedlib-1.3.0.tar.gz http://www.qcustomplot.com/release/1.3.0/QCustomPlot-source.tar.gz -> qcustomplot-source-1.3.0.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	9e0174de733aecba0a7e66b2b01841d2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=ab45aaba2c37888af7fbd3a406f40600
