@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/qcustomplot
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qcustomplot/ChangeLog,v 1.1 2014/09/29 07:17:26 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qcustomplot/ChangeLog,v 1.2 2015/02/21 13:18:03 jlec Exp $
+
+*qcustomplot-1.3.0 (21 Feb 2015)
+
+  21 Feb 2015; Justin Lecher <jlec@gentoo.org> +qcustomplot-1.3.0.ebuild:
+  Version BUmp
 
   29 Sep 2014; Justin Lecher <jlec@gentoo.org> +qcustomplot-1.2.1.ebuild,
   +metadata.xml:
@@ -14,4 +19,3 @@
   28 Sep 2014; Justin Lecher <jlec@gentoo.org> +qcustomplot-1.2.1.ebuild,
   +metadata.xml:
   New addition, written by me
-
